apps/architecture-portal/versioned_docs/version-1.0.37.0/assembly/lmdj.mdx
---
title: LMDJ Product Assembly
area: assembly
status: implemented
owners: [product, core, release]
source_paths: [products/lmdj, products/lmdj/assembly.lock.json]
---

import {BuildIdentity} from '@site/src/components/BuildIdentity';

<BuildIdentity />

## 当前组合
当前 source 为 Product Build `1.0.37.0`，交付 Stage 9 Sequence recording。Assembly 只装配当前写入 Contract `lmdj.project.v3 · 3.0.0`，并把 portable bundle 扩展为 `lmdj.project-bundle.v1 · 1.1.0`；旧 Project v1/v2 只存在于 Project I/O 的读取与确定性总迁移路径，不再是 active Assembly Contract。Foundation 为 `0.3.0`；Authoring Domain、Project I/O、Project Cooker、Audio Runtime 与 Web Runtime Platform 为 `1.0.0`；Application Facade、五个 Host 均进入 `2.0.0`。Provider 与 Capability 身份不变。
Product Build `1.0.25.0` 曾分配 G2 evidence-durability 级联，同样不新增公开产品能力。
Product Build `1.0.24.0` 曾分配八个 Core Module、五个 Host、两个本地 Proof Provider 与八个 active Contract。与前一构建相比，Provider SDK 升至 `1.1.2`，Application Facade 升至 `1.4.1`，Web Runtime Platform 升至 `0.3.1`，CLI/MCP/Native/Creator/Formal Web Runtime Host 与两个本地 Proof Provider 也同步完成 PATCH 级联；Contract 集合与 Provider policy 不变。

## 编译接线
`products/lmdj/src/compiled_assembly.cpp` 是产品专属 wiring；产品中立模块不知道 LMDJ 的具体组合。
Product CMake 只在 Emscripten `lmdj_web_runtime_host` target 存在时链接 compiled catalog object，并注入 Product Build、Platform version 以及 Creator/Diagnostic 两组精确 distribution-contract/Host identity。两个 Web Host 只声明 Web Runtime Platform 依赖；Platform 声明 Facade/Audio 依赖，Provider wiring 仍只属于 Product Assembly。
## Policy
当前 Provider policy 仅允许 local/public/proof.execute 范围，与 Proof-only Provider 相符。
## 身份与完整性
Product Build、每个组件版本和 source hash 被锁定；门户事实生成会拒绝任何漂移。
Project Bundle Contract 仍是 portable transfer 边界；Project v3 是唯一当前写入真相 Contract；同构建 Web transport 仍不是公开 Contract。Provider、Capability 与 model identity 未变化。
## 限制
Sequence recording 已实现；持久化 Asset 编辑、Crop Undo、生产 Provider、云能力、物理 Web 验收与 `beta`/`stable` 仍不能由当前 Assembly 成员关系或门户快照推导。Build Identity 只证明当前页面绑定的 Product/Assembly 身份。
